--- a/src/main/resources/assets/tnunlimited/lang/en_us.json
+++ b/src/main/resources/assets/tnunlimited/lang/en_us.json
@@ -42,6 +42,7 @@
   "item.tnunlimited.pirate_leggings": "Pirate Leggings",
   "item.tnunlimited.fancy_pants_leggings": "Fancy Pants",
   "advancements.mocha_advancement.descr": "Make some Mocha.",
+  "item.tnunlimited.iron_band": "Iron Band",
   "item.tnunlimited.done_pickaxe": "Bomeen Pickaxe",
   "block.tnunlimited.block_of_lead": "Block Of Lead",
   "item.tnunlimited.zinc_ingot": "Zinc Ingot",
@@ -179,6 +180,7 @@
   "item.tnunlimited.golden_crown_helmet": "Golden Crown",
   "item.tnunlimited.aardium_leggings": "Aardium Leggings",
   "item.tnunlimited.golden_crown_boots": "Golden Crown Boots",
+  "item.tnunlimited.nubrium_sickle": "Nubrium  Sickle",
   "item.tnunlimited.pirate_crewman_spawn_egg": "Pirate Crewman Spawn Egg",
   "enchantment.tnunlimited.buffing": "Buffing",
   "item.tnunlimited.antimony_armor_armor_chestplate": "Antimony Chestplate",
